--- a/InternetFanPage/Views/Home/Index.cshtml
+++ b/InternetFanPage/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div id="welcome" class="secTitle newsTitle">
-    Welcome to the official Araiana Grande Fan Page!
+    Welcome to the official Corona Page!
 </div>
 
 <div style="text-align: center;">
@@ -13,7 +13,7 @@
 <hr />
 
 <div class="secTitle">
-    <h2>News & Gossip..</h2>
+    <h2>News & Updates..</h2>
 </div>
 
 <div class="col-md-4">
@@ -21,18 +21,15 @@
         <div class="ft-recipe__content">
             <header class="content__header">
                 <div class="row-wrapper">
-                    <h2 class="recipe-title">'Thank U For Believing in Me'</h2>
+                    <h2 class="recipe-title">'How dangerous is COVID-19?'</h2>
                 </div>
             </header>
             <p class="description">
-                Ariana Grande gave a special shout-out to her record label, Republic,
-                on the eighth anniversary of signing a recording deal with the company.
-                "Signed to RepublicRecords eight years ago today and released my debut album six years ago ..."
-                the pop star tweeted Saturday (Aug. 10). "Thankful for my republic family and deeply proud of
-                every project we’ve released together. music is the most special thing in the world. thank u
-                for believing in me and my voice."
+                Although for most people COVID-19 causes only mild illness, it can make some people very ill.
+                More rarely, the disease can be fatal. Older people, and those with pre- existing medical conditions
+                (such as high blood pressure, heart problems or diabetes) appear to be more vulnerable.
             </p>
-            <footer class="content__footer"><a target="_blank" href="https://www.billboard.com/articles/columns/pop/8527106/ariana-grande-thanks-republic-records-anniversary-of-label-signing-umg-universal-music">For the full story..</a></footer>
+            <footer class="content__footer"><a target="_blank" href="https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200225-sitrep-36-covid-19.pdf#:~:text=Although%20for%20most%20people%20COVID,to%20be%20more%20vulnerable.">For more info..</a></footer>
         </div>
     </div>
 </div>
@@ -112,14 +109,14 @@
 </div>
 
 <div class="video-canvas col-md-8">
-    <video height="100%" width="650" controls poster="~/Content/images/videoPhoto.png">
-        <source src="~/video/Ariana Grande - thank u next.mp4" type="video/mp4">
+    <video height="100%" width="650" controls poster="~/Content/images/covidpic.png">
+        <source src="~/video/Novel coronavirus (2019-nCoV).mp4" type="video/mp4">
     </video>
 </div>
 
 <div class="col-md-4" id="contentWrapper">
     <div id="tweetsList" style="overflow-y: scroll">
-        <a class="twitter-timeline" href="https://twitter.com/ArianaG59221418/lists/tweets-from-ariana?ref_src=twsrc%5Etfw">A Twitter List by ArianaG59221418</a>
+        <a class="twitter-timeline" href="https://twitter.com/WHO">World Health Organization Tweets</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
