--- a/InternetFanPage/Views/Shared/_Layout.cshtml
+++ b/InternetFanPage/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ari</title>
+    <title>COVID-19</title>
 
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 
@@ -17,7 +17,7 @@
     <div class="fixedPart">
         <div class="web-title">
             <div class="home-Title col-sm-10">
-                Ariana Grande
+                COVID-19
             </div>
 
 
