css: added logo and nav

--- a/InternetFanPage/Views/Home/Index.cshtml
+++ b/InternetFanPage/Views/Home/Index.cshtml
@@ -2,12 +2,22 @@
     ViewBag.Title = "Home Page";
 }
 
+    <img id="covidBG" src="/assets/covidBG.png" style="max-width: -webkit-fill-available;
+        box-shadow: 0px 0px 15px 2px #ff0000;
+        position: relative;
+        top: -25px;
+        z-index: -176;
+    ">
 <div id="welcome" class="secTitle newsTitle">
-    Welcome to the official Corona Page!
 </div>
 
 <div style="text-align: center;">
-    <canvas id="ariScreenSaver" class="dvd-canvas"></canvas>
+    <canvas id="ariScreenSaver" class="dvd-canvas"><img id="covidBG" src="/assets/covidBG.png" style="max-width: -webkit-fill-available;
+        box-shadow: 0px 0px 15px 2px #ff0000;
+        position: relative;
+        top: -25px;
+        z-index: -176;
+    "></canvas>
 </div>
 
 <hr />
