--- a/InternetFanPage/Views/Home/Products.cshtml
+++ b/InternetFanPage/Views/Home/Products.cshtml
@@ -73,7 +73,7 @@
                                     @if (product.ProductID == Model.TopSale.ProductID)
                                     {
                                         <span class="badge badge-error">
-                                            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Hot!
+                                            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> Cool!
                                         </span>
                                     }
                                     <h5 class="card-title">@product.Name</h5>
