--- a/InternetFanPage/Views/Home/Index.cshtml
+++ b/InternetFanPage/Views/Home/Index.cshtml
@@ -21,15 +21,18 @@
         <div class="ft-recipe__content">
             <header class="content__header">
                 <div class="row-wrapper">
-                    <h2 class="recipe-title">'How dangerous is COVID-19?'</h2>
+                    <h2 class="recipe-title">'Israeli mask best protection?'</h2>
                 </div>
             </header>
             <p class="description">
-                Although for most people COVID-19 causes only mild illness, it can make some people very ill.
-                More rarely, the disease can be fatal. Older people, and those with pre- existing medical conditions
-                (such as high blood pressure, heart problems or diabetes) appear to be more vulnerable.
+                An Israeli scientist has invented a mask that “seals” the face and, according to testing, blocks 99.25 percent of coronavirus-sized particles, he said.
+                Noam Gavriely helped the Israel Defense Forces develop gas 
+                masks during the Iraq War, and admits that his new product, 
+                ViriMASK, resembles some wartime protection devices and doesn’t
+                look attractive. But he said that in terms of protection, it offers
+                a significant improvement over the N95 masks...
             </p>
-            <footer class="content__footer"><a target="_blank" href="https://www.who.int/docs/default-source/coronaviruse/situation-reports/20200225-sitrep-36-covid-19.pdf#:~:text=Although%20for%20most%20people%20COVID,to%20be%20more%20vulnerable.">For more info..</a></footer>
+            <footer class="content__footer"><a target="_blank" href="https://nocamels.com/2020/08/israeli-mask-best-protection-coronavirus/">For more info..</a></footer>
         </div>
     </div>
 </div>
@@ -39,17 +42,18 @@
         <div class="ft-recipe__content">
             <header class="content__header">
                 <div class="row-wrapper">
-                    <h2 class="recipe-title">#ArianaGrande trends</h2>
+                    <h2 class="recipe-title">Where are cases and deaths rising?</h2>
                 </div>
             </header>
             <p class="description">
-                So it may have been rather confusing to see Twitter declaring the Thank U, Next singer
-                ‘over’ today. The hashtag #arianagrandeisoverparty began trending overnight after the
-                26-year-old hit back at claims she was being sued by Frank Ocean. The hullabaloo started
-                after a fan named Shannon apparently tweeted about a rumour that Ariana had replaced a cover
-                of Ocean’s Close To You with her track with Cashmere Cat, Adore, as the interlude on her current...
+                The WHO says Latin America is the epicentre of the pandemic.
+                Brazil has the second highest number of cases in the world and has
+                recorded almost 96,000 deaths, while Mexico, the second-most affected
+                country in the region, has recorded almost 49,000 deaths.
+                Cases are also increasing rapidly in Colombia, Peru, Argentina and Bolivia.
+                Iran has also been badly affected by the pandemic...
             </p>
-            <footer class="content__footer"><a target="_blank" href="https://metro.co.uk/2019/08/09/arianagrandeisoverparty-trends-star-defends-frank-ocean-lawsuit-rumours-10543974/">For the full story..</a></footer>
+            <footer class="content__footer"><a target="_blank" href="https://www.bbc.com/news/world-51235105">For the full story..</a></footer>
         </div>
     </div>
 </div>
@@ -59,17 +63,16 @@
         <div class="ft-recipe__content">
             <header class="content__header">
                 <div class="row-wrapper">
-                    <h2 class="recipe-title">NORMANI OPENS UP</h2>
+                    <h2 class="recipe-title">The Coronavirus Is Never Going Away</h2>
                 </div>
             </header>
             <p class="description">
-                Since joining her Sweetner tour, Normani has become great friends with Ariana Grande.
-                And while the two enjoyed being "just typical girls" on the road, they also found some time
-                to work together on Normani's upcoming single, "Motivation.""She's been very supportive of me too.
-                I talk to her about the creative process," Normani told Rolling Stone. "I'm like, 'When did you know your
-                album was done.' She was just like, 'Honestly, you'll know. Nobody will have to tell you...
+                The coronavirus that causes COVID-19 has sickened more than 16.5 million people across six continents. 
+                It is raging in countries that never contained the virus. It is resurging in many of the ones that did.
+                If there was ever a time when this coronavirus could be contained, it has probably passed.
+                One outcome is now looking almost certain: This virus is never going away....
             </p>
-            <footer class="content__footer"><a target="_blank" href="https://popcrush.com/normani-ariana-grande-collaboration-single-motivation/">For the full story..</a></footer>
+            <footer class="content__footer"><a target="_blank" href="https://www.theatlantic.com/health/archive/2020/08/coronavirus-will-never-go-away/614860/">For the full story..</a></footer>
         </div>
     </div>
 </div>
@@ -78,24 +81,16 @@
 <hr />
 
 <div class="secTitle">
-    <h2>About Ariana</h2>
+    <h2>About COVID-19</h2>
 </div>
 <div id="about">
     <div class="Stories">
 
-        Justin Bieber and Ariana Grande Address Coachella Lip-Sync Controversy
-        "U were singing with the back tracking like most cameos do," Grande tweeted.
+        Coronavirus disease 2019 (COVID-19) is an infectious disease caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). It was first identified in December 2019 in Wuhan, Hubei, China, and has resulted in an ongoing pandemic. The first confirmed case has been traced back to 17 November 2019 in Hubei. As of 5 August 2020, more than 18.5 million cases have been reported across 188 countries and territories, resulting in more than 701,000 deaths. More than 11.1 million people have recovered.
 
+        Common symptoms include fever, cough, fatigue, shortness of breath, and loss of smell and taste. While the majority of cases result in mild symptoms, some progress to acute respiratory distress syndrome (ARDS) possibly precipitated by cytokine storm, multi-organ failure, septic shock, and blood clots. The time from exposure to onset of symptoms is typically around five days, but may range from two to fourteen days.
 
-        Grande made history at Coachella Arichella this year as she became the youngest person to ever headline the festival. She's also only the fourth woman to ever do so. Needless to say, her performance left her tens of thousands of fans at Coachella in total awe.
-        One person, however, wanted to make a little bit of a more permanent mark on the historic show.
-
-        On Thursday, the 25-year-old singer kept things real when a fan tweeted, "Music is your therapy and I love seeing it heal you." While many expected the "Thank U, Next" crooner to agree with her Arianator, she revealed that's not always the case.
-
-        "Making it is healing," she replied in a since-deleted tweet (which was captured by several fan accounts). "Performing it is like reliving it all over again and it is hell."
-
-
-        It was only last year that Grande and Miller attended Coachella together, which also marked one of their final public outings as a couple before their May 2018 split. Following the singer's surprise appearance during DJ Kygo's set, Miller would tweet, "Very proud of this girl right here. Welcome back. We missed you." Last September, Miller died from a drug overdose
+        The virus is primarily spread between people during close contact, most often via small droplets produced by coughing, sneezing, and talking. The droplets usually fall to the ground or onto surfaces rather than travelling through air over long distances. However, the transmission may also occur through smaller droplets that are able to stay suspended in the air for longer periods of time in enclosed spaces, as typical for airborne diseases. Less commonly, people may become infected by touching a contaminated surface and then touching their face. It is most contagious during the first three days after the onset of symptoms, although spread is possible before symptoms appear, and from people who do not show symptoms. The standard method of diagnosis is by real-time reverse transcription polymerase chain reaction (rRT-PCR) from a nasopharyngeal swab. Chest CT imaging may also be helpful for diagnosis in individuals where there is a high suspicion of infection based on symptoms and risk factors; however, guidelines do not recommend using CT imaging for routine screening.
 
     </div>
 </div>
