--- a/InternetFanPage/Views/Shared/_Layout.cshtml
+++ b/InternetFanPage/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Shop", "Products", "Home")</li>
-                        <li>@Html.ActionLink("Tour", "Concerts", "Home")</li>
+                        <li>@Html.ActionLink("Pandemic Locations", "Locations", "Home")</li>
 
                         @if (Session["User"] != null)
                         {
@@ -111,7 +111,7 @@
         @RenderBody()
         <hr />
         <footer>
-            &copy; @DateTime.Now.Year Tom Ido Ella
+            &copy; @DateTime.Now.Year Tsenzor
         </footer>
     </div>
 
