css: finished navbar styling

--- a/InternetFanPage/Views/Home/Products.cshtml
+++ b/InternetFanPage/Views/Home/Products.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Shop";
 }
 
-<div class="page-wrapper chiller-theme toggled">
+<div class="container body-content page-wrapper chiller-theme toggled">
     <main class="page-content">
         <section class="container-fluid">
             <form asp-controller="Home" asp-action="Products" class="form-inline search-form">
