--- a/InternetFanPage/css/Site.css
+++ b/InternetFanPage/css/Site.css
@@ -2,8 +2,6 @@
     padding-bottom: 20px;
 }
 
-
-
 #welcome {
     text-align: center;
 }
@@ -22,6 +20,21 @@
     padding-right: 15px;
 }
 
+#navbar {
+    display: flex;
+    background-color: #021b3261;
+    color: white;
+    height: 50px;
+    align-items: center;
+    backdrop-filter: blur(3px);
+}
+
+.navLink {
+    padding: 15px;
+    font-family: monospace;
+    font-size: 20px;
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
@@ -34,19 +47,28 @@ textarea {
     src: url(../fonts/DancingScript.ttf);
 }
 
-/*.fixedPart {
-    height: 100px;
-    background-color: #fbe2f0;
-}*/
+.fixedPart {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+}
 
 
 .web-title {
-    height: 80px;
+    height: 70px;
     display: flex;
     justify-content: flex-start;
     align-items:center;
     background: rgb(0,14,83);
-    background: radial-gradient(circle, rgba(0,14,83,1) 0%, rgba(30,1,173,1) 100%);
+    transition: all 0.2s ease-out;
+}
+
+.web-title.scrolled {
+    height: 35px;
+}
+
+.web-title.scrolled #mainLogo {
+    height: 33px;
 }
 
 #logoutBtn {
@@ -54,11 +76,7 @@ textarea {
 }
 
 #loginBtn {
-    box-shadow: inset 0px -3px 7px 0px #29bbff;
-    background: linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
-    background-color: #2dabf9;
-    border-radius: 35px;
-    border: 1px solid #0b0e07;
+    border-radius: 52px;
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
@@ -66,13 +84,18 @@ textarea {
     font-size: 16px;
     padding: 11px 32px;
     text-decoration: none;
-    text-shadow: 0px 1px 0px #263666;
+    border: 2px solid white;
 }
 
-.login {
-    margin-left: auto;
-    margin-right: 25px;
+#loginBtn:hover {
+    background-color: #ffffff33;
 }
+
+
+    .login {
+        margin-left: auto;
+        margin-right: 25px;
+    }
 
 
 .home-Title {
@@ -86,6 +109,7 @@ textarea {
 
 #mainLogo {
     height: 50px;
+    transition: all 0.2s ease-out;
 }
 
 .hello-Title {
@@ -93,8 +117,6 @@ textarea {
     font-size: 40px;
     text-align: right;
 }
-
-
 
 video {
 }
