--- a/InternetFanPage/Views/Home/Products.cshtml
+++ b/InternetFanPage/Views/Home/Products.cshtml
@@ -10,7 +10,7 @@
             <form asp-controller="Home" asp-action="Products" class="form-inline search-form">
                 <div class="form-group">
                     <input class="form-control" type="text" name="SearchTermName" placeholder="Search by name" aria-label="SearchName" style="width:250px">
-                    <input class="form-control" type="number" name="SearchTermPopulation" placeholder="filter by max price" aria-label="SearchPopulation" style="width:160px">
+                    <input class="form-control" type="number" name="SearchTermPopulation" placeholder="filter by max price" aria-label="SearchPrice" style="width:160px">
 
                     <select class="form-control" name="CategoryId" aria-label="CategoryId">
                         <option value="">Choose category</option>
@@ -114,7 +114,7 @@
                                             <div id="product-name" class="product-info">?</div>
                                         </div>
                                         <div class="product-detail-row">
-                                            <div class="col-md-6 row-title">Population:</div>
+                                            <div class="col-md-6 row-title">Price:</div>
                                             <div id="product-price" class="product-info">?</div>
                                         </div>
                                         <div class="product-detail-row">
