--- a/InternetFanPage/Views/Shared/_Layout.cshtml
+++ b/InternetFanPage/Views/Shared/_Layout.cshtml
@@ -29,8 +29,9 @@
             }
             else
             {
-                <h1 class="hello-Title">Hello @Session["User"]</h1>
-                <a href="#" id="logoutBtn">Log Out</a>
+                <div class="login">
+                    <a href="#" id="logoutBtn" class="loginBtn">Log Out</a>
+                </div>
             }
         </div>
         @*<div class="navbar">
@@ -52,7 +53,7 @@
         <div id="navbar">
                 <div class="navLink">@Html.ActionLink("Home", "Index", "Home")</div>
                 <div class="navLink">@Html.ActionLink("Shop", "Products", "Home")</div>
-                <div class="navLink">@Html.ActionLink("Tour", "Concerts", "Home")</div>
+                <div class="navLink">@Html.ActionLink("Pandemic Locations", "Locations", "Home")</div>
 
                 @if (Session["User"] != null)
                 {
@@ -77,7 +78,7 @@
                 </form>
 
                 <div class="login-help">
-                    <a href="#" id="registerBtn">Register</a> -
+                    <a href="#" id="registerBtn">Register</a>
                 </div>
             </div>
         </div>
