--- a/CoronaStore/Views/Home/UserProducts.cshtml
+++ b/CoronaStore/Views/Home/UserProducts.cshtml
@@ -3,14 +3,15 @@
     ViewBag.Title = "UserPurchase";
 }
 
-<h2>Your Purchases</h2>
+<div class="container body-content page-wrapper chiller-theme toggled">
+        <h2>Your Purchases</h2>
 
-<div class="products"></div>
+        <div class="products"></div>
 
 
 
-<input type="hidden" id="session" data-value="@Session["UserID"]" />
-
+    <input type="hidden" id="session" data-value="@Session["UserID"]" />
+</div>
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 <link rel="stylesheet" href="~/css/products.css" />
@@ -36,7 +37,7 @@
                         " style='display:block; width:150px;height:150px;'> " +
                         " <div class='card-body'>" +
                         "<h5 class='card-title'>" + list[i].Name + "</h5>" +
-                        "<h5 class='card-title'> Amount: " + objectCount[1][i]+ "</h5>" +
+                        "<h5 class='card-title'> Amount: " + objectCount[1][i] + "</h5>" +
                         "<h5 class='card-title'>" + list[i].Description + "</h5>" +
                         "</div>" +
                         "</div>" +
