--- a/CoronaStore/Views/Shared/_Layout.cshtml
+++ b/CoronaStore/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
     <div class="fixedPart">
         <div class="web-title">
             <div class="home-Title">
-                <img id="mainLogo" src="/assets/logo white.png">
+                <a href="/">
+                    <img id="mainLogo" src="/assets/logo white.png">
+                </a>
             </div>
 
             @if (Session["User"] == null)
@@ -34,22 +36,6 @@
                 </div>
             }
         </div>
-        @*<div class="navbar">
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("Shop", "Products", "Home")</li>
-                        <li>@Html.ActionLink("Pandemic Locations", "Locations", "Home")</li>
-
-                @if (Session["User"] != null)
-                {
-                    <li>@Html.ActionLink("My Shopping", "UserProducts", "Home")</li>
-                }
-                @if (Session["IsAdmin"] != null && (bool)Session["IsAdmin"])
-                {
-                    <li>@Html.ActionLink("Manage", "Manager", "Home")</li>
-                }
-            </ul>
-        </div>*@
         <div id="navbar">
                 <div class="navLink">@Html.ActionLink("Home", "Index", "Home")</div>
                 <div class="navLink">@Html.ActionLink("Shop", "Products", "Home")</div>
