--- a/CoronaStore/css/Site.css
+++ b/CoronaStore/css/Site.css
@@ -18,6 +18,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    padding-top: 10%;
 }
 
 #navbar {
@@ -27,6 +28,7 @@
     height: 50px;
     align-items: center;
     backdrop-filter: blur(3px);
+    backdrop-filter: blur(5px);
 }
 
 .navLink {
