--- a/CoronaStore/Views/Home/Products.cshtml
+++ b/CoronaStore/Views/Home/Products.cshtml
@@ -10,7 +10,7 @@
             <form asp-controller="Home" asp-action="Products" class="form-inline search-form">
                 <div class="form-group">
                     <input class="form-control" type="text" name="SearchTermName" placeholder="Search by name" aria-label="SearchName" style="width:250px">
-                    <input class="form-control" type="number" name="SearchTermPopulation" placeholder="filter by max price" aria-label="SearchPrice" style="width:160px">
+                    <input class="form-control" type="number" name="SearchTermPrice" placeholder="filter by max price" aria-label="SearchPrice" style="width:160px">
 
                     <select class="form-control" name="CategoryId" aria-label="CategoryId">
                         <option value="">Choose category</option>
@@ -88,7 +88,7 @@
                 }
                 @if (Session["IsAdmin"] != null && (bool)Session["IsAdmin"])
                 {
-                    <div id="add-product">
+                    <div id="add-product" style="cursor: pointer">
                         <div class="card-body">
                             <img class="card-img-top" src="~/Content/images/plus.png" style='display:block; width:150px;height:150px;'>
                         </div>
