fixed login and register modals

--- a/CoronaStore/Views/Home/Index.cshtml
+++ b/CoronaStore/Views/Home/Index.cshtml
@@ -3,10 +3,11 @@
 }
 
 <div id="welcome" class="" style="
-        height: 339px;
+        height: 450px;
         width: -webkit-fill-available !important;
         padding: 0 !important;">
-    <div id="covidBG" src="/assets/covidBG.png" style="        max-height: 100%;
+    <div id="covidBG" src="/assets/covidBG.png" style="        
+        max-height: 100%;
         max-width: -webkit-fill-available;
         box-shadow: 0px 0px 15px 2px #acacac;
         position: relative;
@@ -23,7 +24,7 @@
 
 <hr />
 
-<div class="container body-content">
+<div class="container">
     <div class="secTitle">
         <h2>News & Updates..</h2>
     </div>
@@ -116,7 +117,7 @@
     </div>
 
     <div class="video-canvas col-md-8">
-        <video height="100%" width="650" controls poster="/assets/covidBG.png">
+        <video height="100%" width="650" controls poster="/assets/covidBGG.png">
             <source src="~/video/Novel coronavirus (2019-nCoV).mp4" type="video/mp4">
         </video>
     </div>
