--- a/CoronaStore/css/manager.css
+++ b/CoronaStore/css/manager.css
@@ -3,7 +3,7 @@
 }
 
 #tweet {
-    font: 20px sans-serif;
+    font: 20px;
 }
 #twitter {
     
@@ -18,7 +18,7 @@
     }
 
 .axis {
-    font: 10px sans-serif;
+    font: 10px;
 }
 
     .axis path,
